tests/ui/iterators/vec-on-unimplemented.stderr
error[E0599]: no method named `map` found for struct `Vec<bool>` in the current scope
  --> $DIR/vec-on-unimplemented.rs:3:31
   |
LL |     let _ = vec![true, false].map(|v| !v).collect::<Vec<_>>();
   |                               ^^^ `Vec<bool>` is not an iterator
   |
help: call `.into_iter()` first
   |
LL |     let _ = vec![true, false].into_iter().map(|v| !v).collect::<Vec<_>>();
   |                               ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
